compiler-core/src/parse/snapshots/gleam_core__parse__tests__type_invalid_variant_constructor_with_field_without_type.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\ntype A {\n    A(String)\n    type\n}\n"
---
error: Syntax error
  ┌─ /src/parse/error.gleam:4:5
  │
4 │     type
  │     ^^^^ I was not expecting this

Each custom type variant must have a constructor:

type A {
  Type(
    field_label: TypeAnnotation,
  )
}
