compiler-core/src/parse/snapshots/gleam_core__parse__tests__unused_function_body.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\n@external(javascript, \"foo\", \"bar\")\n@external(erlang, \"foo\", \"bar\")\npub fn foo() -> Int {\n  // This is dead code since there already is an\n  // external implementation for all targets.\n  11\n}"
---

warning: Unused function body.
  ┌─ :4:21
  │  
4 │   pub fn foo() -> Int {
  │ ╭─────────────────────^
5 │ │   // This is dead code since there already is an
6 │ │   // external implementation for all targets.
7 │ │   11
8 │ │ }
  │ ╰─^

The function already has external implementations for all targets.
Hint: Remove the body of this function or @external attributes.

