compiler-core/src/parse/snapshots/gleam_core__parse__tests__with_let_binding3.snap
---
source: compiler-core/src/parse/tests.rs
expression: "let assert [x] = [2]"
---
[
    Assignment(
        Assignment {
            location: SrcSpan {
                start: 0,
                end: 20,
            },
            value: List {
                location: SrcSpan {
                    start: 17,
                    end: 20,
                },
                elements: [
                    Int {
                        location: SrcSpan {
                            start: 18,
                            end: 19,
                        },
                        value: "2",
                        int_value: 2,
                    },
                ],
                tail: None,
            },
            pattern: List {
                location: SrcSpan {
                    start: 11,
                    end: 14,
                },
                elements: [
                    Variable {
                        location: SrcSpan {
                            start: 12,
                            end: 13,
                        },
                        name: "x",
                        type_: (),
                        origin: VariableOrigin {
                            syntax: Variable(
                                "x",
                            ),
                            declaration: LetPattern,
                        },
                    },
                ],
                tail: None,
                type_: (),
            },
            kind: Assert {
                location: SrcSpan {
                    start: 0,
                    end: 10,
                },
                assert_keyword_start: 4,
                message: None,
            },
            compiled_case: CompiledCase {
                tree: Fail,
                subject_variables: [],
                unreachable: {},
            },
            annotation: None,
        },
    ),
]
